--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,13 @@
 project(pidProject)
 
+# Set RPATH for the executable
+set(CMAKE_INSTALL_RPATH "${CMAKE_BINARY_DIR}/src")
+set(CMAKE_BUILD_RPATH "${CMAKE_BINARY_DIR}/src")
+set(CMAKE_BUILD_WITH_INSTALL_RPATH TRUE)
+set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
+set(CMAKE_SKIP_RPATH FALSE)
+set(CMAKE_SKIP_INSTALL_RPATH FALSE)
+
 add_executable(${PROJECT_NAME} ${PROJECT_NAME}.cpp)
 
 add_subdirectory(pidProjectLib)
